--- a/front/your-car-your-way-chat-poc/package.json
+++ b/front/your-car-your-way-chat-poc/package.json
@@ -16,7 +16,9 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@stomp/stompjs": "^7.1.1",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
