--- a/front/ycyw-chat-poc/package.json
+++ b/front/ycyw-chat-poc/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@stomp/stompjs": "^6.1.0",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/vite": "^4.1.11",
     "buffer": "^6.0.3",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.5.0",
@@ -31,12 +33,15 @@
     "@types/jasmine": "~5.1.0",
     "@types/node": "^24.0.15",
     "@types/sockjs-client": "^1.5.4",
+    "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "typescript": "~5.7.2"
   }
 }
