--- a/back/chat-poc/pom.xml
+++ b/back/chat-poc/pom.xml
@@ -6,7 +6,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.5.3</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
     <groupId>com.your-car-your-way</groupId>
     <artifactId>chat-poc</artifactId>
@@ -15,7 +15,7 @@
     <description>POC for the app’s chat</description>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
     </properties>
 
     <dependencies>
